navbar fixed to solve background image jump on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ body::before {
   right: 0px;
   bottom: 0px;
   left: 0px;
+  height: 100vh;
   opacity: 0.7;
 }
 #root {
@@ -301,6 +302,14 @@ canvas {
     display: none;
   }
   @media only screen and (max-width: 700px) {
+    .navbar {
+      position: fixed;
+      width: 100%;
+      z-index: 10;
+    }
+    h1 {
+      margin-top: 70px;
+    }
     .weatherImg {
       height: 50px;
       width: auto;
